// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`frodo config-manager delete secret-mappings "frodo config-manager delete secret-mappings --dry-run -n am.applications.agents.remote.consent.request.signing.ES384": should print a dryrun message deleting a secret-mapping by name from cloud." 1`] = `""`;

exports[`frodo config-manager delete secret-mappings "frodo config-manager delete secret-mappings --dry-run -n am.applications.agents.remote.consent.request.signing.ES384": should print a dryrun message deleting a secret-mapping by name from cloud." 2`] = `
"Experimental feature in use: 'frodo config-manager delete secret-mappings'. This feature may change without notice.
Dry run: Deleting secret ID mapping: am.applications.agents.remote.consent.request.signing.ES384 in realm 'alpha'
"
`;

exports[`frodo config-manager delete secret-mappings "frodo config-manager delete secret-mappings -n am.applications.agents.remote.consent.request.signing.ES384": should delete a secret by name from cloud." 1`] = `""`;

exports[`frodo config-manager delete secret-mappings "frodo config-manager delete secret-mappings -n am.applications.agents.remote.consent.request.signing.ES384": should delete a secret by name from cloud." 2`] = `
"Experimental feature in use: 'frodo config-manager delete secret-mappings'. This feature may change without notice.
Deleted secret ID mapping: am.applications.agents.remote.consent.request.signing.ES384 in realm 'alpha'
"
`;
